6920
2.12.0-RC1 gives an error message:

{noformat}
A.scala:60: error: parameter 'out$1' requires field but conflicts with value out$1 in trait Trait$1
    var out = 1
        ^
one error found
{noformat}
